fix: fix response description empty error and security OAuth2 AccessCode scheme error (#78)
